# digital_report_etl_pipelines

./: .env.example  .gitignore  FINAL_WRITE_STRATEGY.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_INCREMENT_MODE.md  QUICK_TEST_GUIDE.md  README.md  _tmp_verify_test.py  build-and-deploy.ps1  check_ad_aggregation.sql  check_audience_structure.sql  check_campaign_production.py  check_ctr.py  check_ctr_column_type.py  check_custom_conversion.sql  check_google_aggregation.sql  check_google_report_table.sql  check_id_google_ads.py  check_id_vertica.py  check_linkedin_pk.sql  check_linkedin_schema.sql  check_microsoft_tables.py  check_schema.py  check_schema.sql  check_zeliatech.py  compare_google_schemas.sql  copy_facebook_data_clean.sql  copy_facebook_data_only.sql  copy_facebook_data_vertica.sql  copy_facebook_simple.sql  create_facebook_test_tables.py  create_facebook_test_tables.sql  create_facebook_test_tables_final.sql  create_facebook_test_tables_final_fixed.sql  create_facebook_test_tables_fixed.sql  debug_audience.py  debug_audience2.py  debug_campaign.py  debug_google_api_placement.py  debug_placement.py  (+33 more)
.claude/: settings.local.json
.github/workflows/: deploy-all-platforms.yml  deploy-facebook-ads.yml  deploy-google-ads.yml  deploy-linkedin-ads.yml  deploy-microsoft-ads.yml
azure/: LOGIC_APP_FINAL_FLOW.md  LOGIC_APP_QUICK_SETUP.md  LOGIC_APP_SETUP_GUIDE.md  README_MONITORING_SYSTEM.md  TESTING_GUIDE.md  email-template-simple.html  facebook-ads-job.yaml  google-ads-job.yaml  linkedin-ads-job.yaml  logic-app-social-pipeline-report.json  microsoft-ads-job.yaml  social-ads-orchestrator-job.yaml
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
newsletter/: DEPLOYMENT.md  Dockerfile  __init__.py  pipeline.py
newsletter/adapters/: __init__.py  azure_blob_adapter.py  hcti_adapter.py  hcti_client.py  local_storage_adapter.py  mapp_adapter.py  mapp_client.py  repository_adapter.py  s3_adapter.py
shared/: __init__.py
sms/: __init__.py  config.py  debug_mapp_api.py  pipeline.py  run_sms_pipeline.py  test_single_campaign.py
social/: CLEANUP_LEGACY_CODE.md  Dockerfile  FINAL_CLEANUP_SUMMARY.md  MULTI_PLATFORM_SUMMARY.md  MULTI_PLATFORM_TESTING.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_SUMMARY.md  README.md  REFACTORING_GUIDE.md  TABLES_REFERENCE.md  TESTING.md  __init__.py  debug_api_call.py  debug_linkedin_organic.py  debug_response_follower_stats.json  debug_response_page_stats.json  debug_response_posts.json  debug_response_share_stats.json  debug_targeting.py  run_pipeline.py  run_pipeline.py.bak2  run_pipeline.py.bak3  run_platform.py  sync_test_tables.py  test_all_platforms.bat  test_facebook.bat  test_google.bat  test_linkedin.bat  test_linkedin.sh  test_pipeline.py  test_real_pipeline.py  truncate_test_tables.py  verify_test_data.py
(+108 files in other folders)
