[project]
name = "digital-report-etl-pipelines"
version = "1.0.0"
description = "ETL pipelines for digital report generation - Newsletter rendering and Social ads data"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alex Marino", email = "alex.marino@esprinet.com" },
]

# Dipendenze comuni a entrambi i progetti
dependencies = [
    "vertica-python>=1.3.8",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "requests>=2.28.0",
    "joblib>=1.2.0",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.8.0",
    "jinjasql>=0.1.8",
    "jinja2>=3.0.0,<3.1.0",  # jinjasql requires Jinja2 <3.1 for Markup import
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=12.1.0",
    "beautifulsoup4>=4.14.3",
    "minio>=7.2.20",
]

[project.scripts]
social-pipeline = "social.run_pipeline:main"
social-test = "social.test_pipeline:main"

[project.optional-dependencies]
# Dipendenze specifiche per newsletter
newsletter = [
    "beautifulsoup4>=4.12.0",
    "selenium>=4.16.0",
    "weasyprint>=60.0",
    "boto3>=1.20.0",
    "oracledb>=1.0.0",
    "azure-storage-blob>=12.0.0",
    "webdriver-manager>=4.0.0",
]

# Dipendenze specifiche per social
social = [
    "facebook-business>=19.0.0",
    "google-ads>=28.0.0",
    "bingads>=13.0.26",
    "psycopg2-binary>=2.9.0",
    "proto-plus>=1.22.0",
    "protobuf>=4.21.0",
    "pycountry>=22.0.0",
    "emoji>=2.0.0",
    "curlify>=2.2.0",
]

# Dipendenze di sviluppo
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Tutte le dipendenze (per sviluppo locale completo)
all = [
    "digital-report-etl-pipelines[newsletter,social,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "newsletter", "social"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["shared", "newsletter", "social"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
